fix(canary-web-components): update webkit autofill colours for date input dark mode
Update webkit autofill colours for date input dark mode so that it appears correctly after a browser
suggestion

. #2915

--- a/packages/canary-web-components/src/components/ic-date-input/ic-date-input.css
+++ b/packages/canary-web-components/src/components/ic-date-input/ic-date-input.css
@@ -43,7 +43,8 @@ input::-webkit-inner-spin-button {
 }
 
 input:-webkit-autofill {
-  box-shadow: 0 0 0 var(--ic-space-sm) var(--ic-architectural-white) inset;
+  box-shadow: 0 0 0 var(--ic-space-sm) var(--ic-color-background-primary) inset;
+  -webkit-text-fill-color: var(--ic-date-input-text-filled) !important;
 }
 
 input::placeholder {
